[package]
name = "travel-agency"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = { git = "https://github.com/deadshot465/async-openai", version = "0.28.2" }
axum = { version = "0.8.4", features = ["macros"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["cache", "collector", "gateway", "unstable_discord_api"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }
tokio = { version = "1.45.1", features = ["parking_lot", "full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time", "json", "serde", "serde_json"] }
