[package]
name = "travel-agency"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = { git = "https://github.com/deadshot465/async-openai", version = "0.28.2" }
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
command-macros = { path = "command-macros" }
ctor = "0.2"
dashmap = { version = "6.1.0", features = ["serde"] }
firestore = "0.45.1"
google_maps = "3.8.3"
hex = "0.4.3"
http-body-util = "0.1.3"
lazy_static = "1.4"
nacl = "0.5.3"
once_cell = "1.21.3"
paste = "1.0.15"
reqwest = { version = "0.12.19", features = ["json"] }
rustls = "0.23.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["cache", "collector", "gateway", "unstable_discord_api"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }
tokio = { version = "1.45.1", features = ["parking_lot", "full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time", "json", "serde", "serde_json"] }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
